test/conformance/kuttl/validate/clusterpolicy/standard/exclude/exclude-namespace/01-policies.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- policies.yaml
assert:
- policies-assert.yaml
