test/conformance/kuttl/validate/clusterpolicy/standard/exclude/exclude-namespace/resources.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-name
  namespace: default
