test/conformance/kuttl/validate/clusterpolicy/standard/exclude/exclude-namespace/policies-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-label
status:
  conditions:
    - reason: Succeeded
      status: "True"
      type: Ready
